# AI-M6X-cmake-example

./: .clangd  CMakeLists.txt  Makefile  PreLoad.cmake  README.MD  flash_prog_cfg.ini  proj.cmake  proj.conf
main/: main.c
